--- a/EjemploBootstrapNetCore/appsettings.json
+++ b/EjemploBootstrapNetCore/appsettings.json
@@ -8,6 +8,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "cadenaconexion": "Data Source=DESKTOP-PJLSVQ6;Initial Catalog=EjemploPeliculas;Persist Security Info=True;User ID=SA;Password=MCSD2021"
+    "cadenaconexion": "Data Source=*****;Initial Catalog=EjemploPelicula;Persist Security Info=True;User ID=****;Password=********"
   }
 }
+
+
